tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_cyclic_type_aliases/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Dependency cycle found
  ┌─ src/main.nr:3:9
  │
3 │         type B = A;
  │         ---------- 'B' recursively depends on itself: B -> A -> B
  │

Aborting due to 1 previous error
