tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_cyclic_type_aliases/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Dependency cycle found
  ┌─ src/main.nr:3:9
  │
3 │         type B = A;
  │         ---------- 'B' recursively depends on itself: B -> A -> B
  │

Aborting due to 1 previous error
